log
Fri May  1 09:01:08 PM UTC 2026: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:51:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   51 |     map->lower_than = lower_than;
      |     ^~~
      |     mapa
treemap.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
1232d33
Fri May  1 09:01:28 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
6e52e69
Fri May  1 09:11:19 PM UTC 2026: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:9: error: ‘keyAux’ undeclared (first use in this function)
   63 |         keyAux = aux->pair->key;
      |         ^~~~~~
treemap.c:63:9: note: each undeclared identifier is reported only once for each function it appears in
e7265ba
Fri May  1 09:11:47 PM UTC 2026: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/60
2ada75c
Fri May  1 09:18:58 PM UTC 2026: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:18: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Werror=format=]
   64 |         printf("%d", &cont);
      |                 ~^   ~~~~~
      |                  |   |
      |                  int int *
      |                 %ls
cc1: all warnings being treated as errors
14d33bb
